--- a/templates/SGRD/planProduccion.html
+++ b/templates/SGRD/planProduccion.html
@@ -74,9 +74,11 @@
   <div class="col-md-2">
     <a class="btnn btn-full" href="#" id="id_eliminar_plan"><i class="ion-md-trash icon-small"></i>Eliminar plan de producción</a>
   </div>
+    {% if entradas %}
   <div class="col-md-2">
     <a class="btnn btn-full" href="{% url 'exportar-plan' recurso.id %}"><i class="ion-ios-list-box icon-small"></i>Exportar a Excel</a>
   </div>
+    {% endif %}
 </div>
 
 {% include "confirmation/delete_plan.html" %}
